[package]
name = "ldk-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
nostr-sdk = { git = "https://github.com/dukeh3/nostr" }
nwc = { git = "https://github.com/dukeh3/nostr" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }

[dev-dependencies]
testcontainers = "0.27"
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
ldk-node = "0.7"
